Sorted treatment of the 'verb' in Actions. Fixed bugs here and there.

--- a/sled_collections/templates/sled_collections/collection_detail.html
+++ b/sled_collections/templates/sled_collections/collection_detail.html
@@ -19,7 +19,7 @@
     <p>Access level: {{ collection.access_level }}</p>
 
     {% if collection.owner == user %}
-    <button type="button" class="jb-submit-button-1" data-form-url="{% url 'sled_collections:collection-update' collection.pk %}">
+    <button type="button" class="sled-modal jb-submit-button-1" data-form-url="{% url 'sled_collections:collection-update' collection.pk %}">
       <img src="{% static 'icons/pencil.svg' %}" alt="pencil">
       Update
     </button>
@@ -27,7 +27,7 @@
       <img src="{% static 'icons/trash.svg' %}" alt="trash">
       Delete
     </button>
-    <button type="button" class="jb-submit-button-1" data-form-url="{% url 'sled_collections:collection-cede-ownership' collection.pk %}">
+    <button type="button" class="sled-modal jb-submit-button-1" data-form-url="{% url 'sled_collections:collection-cede-ownership' collection.pk %}">
       <img src="{% static 'icons/trash.svg' %}" alt="trash">
       Cede ownership
     </button>
