--- a/sled_users/templates/sled_users/user_index.html
+++ b/sled_users/templates/sled_users/user_index.html
@@ -176,30 +176,7 @@
   <div>
     <h1 class="jb-heading-2">New Notifications ({{ N_note_unread }})</h1>
     <div>
-      {% if unread_notifications %}
-      <table>
-	<thead>
-          <tr>
-            <th>Sender</th>
-            <th>Sent at</th>
-            <th>Level</th>
-            <th>Verb</th>
-          </tr>
-	</thead>
-	<tbody>
-          {% for note in unread_notifications %}
-          <tr>
-            <td>{{ note.actor }}</td>
-            <td>{{ note.timestamp }}</td>
-            <td>{{ note.level }}</td>
-            <td>{{ note.verb }}</td>
-          </tr>
-          {% endfor %}
-	</tbody>
-      </table>
-      {% else %}
-      <p class="jb-paragraph-2">No new notifications</p>
-      {% endif %}
+      {% include "notifications_container.html" with notifications=unread_notifications %}
       <a href="{% url 'sled_notifications:notifications-list' %}">See all notifications</a>
     </div>
   </div>
